--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@vue/cli-service": "^4.5.0",
     "@vue/eslint-config-standard": "^5.1.2",
     "@vue/test-utils": "^1.0.3",
+    "autoprefixer": "^9.8.8",
     "babel-eslint": "^10.1.0",
     "compression-webpack-plugin": "^6.0.5",
     "eslint": "^6.7.2",
