--- a/nginx.conf
+++ b/nginx.conf
@@ -1,16 +1,17 @@
-# 在http块中配置全局的Nginx选项
 http {
-  server {
-    # 监听80端口
-    listen 80;
-    
-    # 定义服务器名称
-    server_name localhost;
-    
-    # 配置默认的请求处理
-    location / {
-      root /usr/share/nginx/html;
-      index index.html;
-    }
-  }
+      include mime.types;
+      default_type application/octet-stream;
+      keepalive_timeout 65;
+      server {
+           listen 80;
+            server_name localhost;
+            location /etc/nginx/html/dist/ {
+              root html;
+             index index.html index.htm;
+            }
+      }
 }
+ events {
+            worker_connections  1024;    #nginx的最大并发访问量
+            use epoll;    #异步IO
+        }
