--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "vue-count-to": "^1.0.13",
     "vue-cropper": "^0.5.4",
     "vue-drr": "^1.0.9",
-    "vue-router": "^3.2.0",
+    "vue-router": "3.2.0",
     "vue-video-player": "^5.0.2",
     "vuedraggable": "^2.23.2",
     "vuex": "^3.5.1",
